Fix collapsing target and add links to event icons

--- a/app.scss
+++ b/app.scss
@@ -77,6 +77,15 @@ html {
                     padding-left: 5px;
                     padding-right: 5px;
                 }
+                
+                .author, .target, .time {
+                    width: auto;
+                    flex-shrink: 0;
+                }
+
+                .message {
+                    flex-grow: 5;
+                }
 
                 .author {
                     background: #efefef;
